Finished HTML phase one, starting on CSS standards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Sidebar Menu</title>
+  <title>Case Study: Stefanie Tam</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -18,64 +18,337 @@
   <link rel="stylesheet" href="https://use.typekit.net/axv7ufs.css">
 </head>
 
-<body class="nav-open">
+<body>
+  <header>
+    <ul>
+      <li class="col-7-left" id="header-name"><a href="#">STEF<span id="header-lc">anie</span>TAM</a></li>
+      <!-- FOR SUBPAGES
+      <li class="page-title"></li>
+    -->
+      <li class="col-7-right">INFORMATION</li>
+      <li class="col-7-right"><img src="img/face-01.png"></li>
+    </ul>
+  </header>
+
+  <div class="arrow-left">
+    <i class="fas fa-chevron-left"></i>
+  </div>
+  <div class="arrow-right">
+    <i class="fas fa-chevron-right"></i>
+  </div>
+
+  <section class="view-finder">
+
+    <!--Project Titles-->
+    <div class="project-acro" id="acro1">
+      <p>://OP.I</p>
+    </div>
+    <div class="project-acro" id="acro2">
+      <p>FWTC</p>
+    </div>
+    <div class="project-acro" id="acro3">
+      <p>MP2</p>
+    </div>
+    <div class="project-acro" id="acro4">
+      <p>WACDFH</p>
+    </div>
+
+    <!--Project images and statements-->
+    <div class="header-info" id="name-hover">
+      <p class="name-hover-info">
+        i'm stefanie, an la based multidisciplinary designer and design senior at ucla d|ma. i'm keen on funky mags, poorly rendered 3D objects, and fun webtoys.
+      </p>
+    </div>
+
+    <div class="header-info" id="information-hover">
+      <p class="information-hover-info">
+        <a href="#">email</a> — <a href="#">cv</a> — <a href="#">are.na</a> — <a href="#">ig</a>
+      </p>
+      <p>
+        updated: 10.10.18
+      </p>
+    </div>
+
+    <!-- 01.0-->
+    <div class="project-image" id="image0-1">
+      <p class="project-title-body">
+        HTTP://OFPLACE.INFO Book &amp; website.
+      </p>
+    </div>
+    <div class="project-image" id="image1-1">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image2-1">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image3-1">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image4-1">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image5-1">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image6-1">
+      <p class="project-statement">
+        HTTP://OFPLACE.INFO/ is the result of an extensive surveillance collection of Google Maps satellite images. With choices dictated by randomization, pre-established rules, curiosity, and intuition, ://OFPLACE. archives 600 images of 20 different cities.
+      </p>
+      <p>
+        book: 6"x6"; website: <a href="http://ofplace.info">http://ofplace.info</a>
+      </p>
+    </div>
+
+
+    <!-- 02.0-->
+    <div class="project-image" id="image0-2">
+      <p class="project-title-body">
+        From waste to change: Sustainability &amp; Activism
+      </p>
+    </div>
+    <div class="project-image" id="image1-2">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image2-2">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image3-2">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image4-2">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image5-2">
+      <img src="https://via.placeholder.com/800x600.png">
+    </div>
+    <div class="project-image" id="image6-2">
+      <p class="project-statement">
+        From Waste to Change is a designed activism and sustainability project containing two triptych poster series, a book documenting a week's worth of waste, and a sticker packet to record your changed wasteful habits.</p>
+      <p>
+         book: 6"x9.5", 3"x4.25"; posters: 24"x36", 18"x24"
+      </p>
+    </div>
+
+    <!-- 03.0-->
+    <div class="project-image" id="image0-3">
+      <p class="project-title-body">
+        Miscellaneous Posters II
+      </p>
+    </div>
+    <div class="project-image" id="image1-3">
+      <img src="https://via.placeholder.com/600x800.png">
+    </div>
+    <div class="project-image" id="image2-3">
+      <img src="https://via.placeholder.com/600x800.png">
+    </div>
+    <div class="project-image" id="image3-3">
+      <img src="https://via.placeholder.com/600x800.png">
+    </div>
+    <div class="project-image" id="image4-3">
+      <img src="https://via.placeholder.com/600x800.png">
+    </div>
+    <div class="project-image" id="image5-3">
+      <img src="https://via.placeholder.com/600x800.png">
+    </div>
+    <div class="project-image" id="image6-3">
+      <img src="https://via.placeholder.com/600x800.png">
+    </div>
+    <div class="project-image" id="image7-3">
+      <p class="project-statement">
+        Ephemeral explorations of type, color, and composition.
+      </p>
+      <p class="project-statement">
+        11"x17"
+      </p>
+    </div>
+
+    <!-- 04.0-->
+    <div class="project-image" id="image0-4">
+      <p class="project-title-body">
+        WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE
+      </p>
+    </div>
+    <div class="project-image" id="image1-4">
+      <img src="https://via.placeholder.com/600x600.png">
+    </div>
+    <div class="project-image" id="image2-4">
+      <img src="https://via.placeholder.com/600x600.png">
+    </div>
+    <div class="project-image" id="image3-4">
+      <img src="https://via.placeholder.com/600x600.png">
+    </div>
+    <div class="project-image" id="image4-4">
+      <p class="project-statement">
+        Design Collateral for UCLA's World Arts and Culture Dance Department's Annual First Hand Dance concert.
+      </p>
+      <p>
+        20"x30", 8.5"x11", 2.5"x6"
+      </p>
+    </div>
+
+    <!--Slide numnbers-->
+    <!-- 01.0-->
+    <div class="project-slide-no" id="slide0-1">
+      <p>01.0</p>
+    </div>
+    <div class="project-slide-no" id="slide1-1">
+      <p>01.1</p>
+    </div>
+    <div class="project-slide-no" id="slide2-1">
+      <p>01.2</p>
+    </div>
+    <div class="project-slide-no" id="slide3-1">
+      <p>01.3</p>
+    </div>
+    <div class="project-slide-no" id="slide4-1">
+      <p>01.4</p>
+    </div>
+    <div class="project-slide-no" id="slide5-1">
+      <p>01.5</p>
+    </div>
+    <div class="project-slide-no" id="slide6-abc1">
+      <p>01.ABC</p>
+    </div>
+
+    <!--2.0-->
+    <div class="project-slide-no" id="slide0-2">
+      <p>02.0</p>
+    </div>
+    <div class="project-slide-no" id="slide1-2">
+      <p>02.1</p>
+    </div>
+    <div class="project-slide-no" id="slide2-2">
+      <p>02.2</p>
+    </div>
+    <div class="project-slide-no" id="slide3-2">
+      <p>02.3</p>
+    </div>
+    <div class="project-slide-no" id="slide4-2">
+      <p>02.4</p>
+    </div>
+    <div class="project-slide-no" id="slide5-2">
+      <p>02.5</p>
+    </div>
+    <div class="project-slide-no" id="slide6-abc2">
+      <p>02.ABC</p>
+    </div>
+
+    <!--3.0-->
+    <div class="project-slide-no" id="slide0-3">
+      <p>03.0</p>
+    </div>
+    <div class="project-slide-no" id="slide1-3">
+      <p>03.1</p>
+    </div>
+    <div class="project-slide-no" id="slide2-3">
+      <p>03.2</p>
+    </div>
+    <div class="project-slide-no" id="slide3-3">
+      <p>03.3</p>
+    </div>
+    <div class="project-slide-no" id="slide4-3">
+      <p>03.4</p>
+    </div>
+    <div class="project-slide-no" id="slide5-3">
+      <p>03.5</p>
+    </div>
+    <div class="project-slide-no" id="slide6-3">
+      <p>03.6</p>
+    </div>
+    <div class="project-slide-no" id="slide7-abc3">
+      <p>03.ABC</p>
+    </div>
+
+    <!--4.0-->
+    <div class="project-slide-no" id="slide0-4">
+      <p>04.0</p>
+    </div>
+    <div class="project-slide-no" id="slide1-4">
+      <p>04.1</p>
+    </div>
+    <div class="project-slide-no" id="slide2-4">
+      <p>04.2</p>
+    </div>
+    <div class="project-slide-no" id="slide3-4">
+      <p>04.3</p>
+    </div>
+    <div class="project-slide-no" id="slide4-abc4">
+      <p>04.ABC</p>
+    </div>
+
+    <section class="project-nav">
+    <div class="project-info" id="project-info-1">
+      <h3>1</h3>
+      <h3><a href="#">HTTP://OFPLACE.INFO book &amp; website</a></h3>
+      <ul class="project-info-no">
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">ABC</a></li>
+      </ul>
+    </div>
+
+    <div class="project-info" id="project-info-2">
+      <h3>2</h3>
+      <h3><a href="#">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
+      <ul class="project-info-no">
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a</li>
+        <li><a href="#">3</a</li>
+        <li><a href="#">4</a</li>
+        <li><a href="#">5</a</li>
+        <li><a href="#">ABC</a></li>
+      </ul>
+    </div>
+
+    <div class="project-info" id="project-info-3">
+      <h3>3</h3>
+      <h3><a href="#">MISCELLANEOUS POSTERS II</a></h3>
+      <ul class="project-info-no">
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">6</a></li>
+        <li><a href="#">ABC</a></li>
+      </ul>
+    </div>
+
+    <div class="project-info" id="project-info-4">
+      <h3>4</h3>
+      <h3><a href="#">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
+      <ul class="project-info-no">
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">ABC</a></li>
+      </ul>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
 
   <!--[if lte IE 9]>
+  <!--[if lte IE 9]\
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <nav class="main-nav">
-    <i class="close-icon">&times;</i>
-    <ul>
-      <li class="active"><a href="#!">Home</a></li>
-      <li><a href="#!">About</a></li>
-      <li><a href="#!">Work</a></li>
-    </ul>
-  </nav>
 
-  <div class="page-content">
 
-  <header class="page-header">
-      <i class="nav-icon fa fa-bars"></i>
-      <h1>Tripp.le</h1>
-  </header>
 
-    <main class="main-content">
-      <article>
-        <h2>Three time the fun!</h2>
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-        <img src="https://via.placeholder.com/800x600" alt="placeholder">
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-      </article>
-      <article>
-        <h2>Title II</h2>
-        <img src="https://via.placeholder.com/800x600" alt="placeholder">
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, eos ea iuvaret necessitatibus. In sit audiam denique, duo eu praesent interesset. Ne per putent sensibus. Mel alii equidem tincidunt et, an legimus propriae vivendum quo, ad purto choro volumus duo.
-        </p>
-      </article>
-    </main>
-  </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
