CSS modified to form basic structure of elements

--- a/index.html
+++ b/index.html
@@ -20,26 +20,23 @@
 
 <body>
   <header>
+    <div class="arrow-left">
+      <i class="fas fa-chevron-left"></i>
+    </div>
+    <div class="arrow-right">
+      <i class="fas fa-chevron-right"></i>
+    </div>
     <ul>
       <li class="col-7-left" id="header-name"><a href="#">STEF<span id="header-lc">anie</span>TAM</a></li>
       <!-- FOR SUBPAGES
-      <li class="page-title"></li>
-    -->
-      <li class="col-7-right">INFORMATION</li>
-      <li class="col-7-right"><img src="img/face-01.png"></li>
+      <li class="page-title"></li>-->
+      <li class="col-7-center">test</li>
+      <li class="col-7-right">INFORMATION <img src="img/face-01.png"></li>
     </ul>
   </header>
-
-  <div class="arrow-left">
-    <i class="fas fa-chevron-left"></i>
-  </div>
-  <div class="arrow-right">
-    <i class="fas fa-chevron-right"></i>
-  </div>
-
-  <section class="view-finder">
-
-    <!--Project Titles-->
+  <div class="view-finder">
+  <!--Project Titles-->
+  <section class="accro-section">
     <div class="project-acro" id="acro1">
       <p>://OP.I</p>
     </div>
@@ -52,6 +49,7 @@
     <div class="project-acro" id="acro4">
       <p>WACDFH</p>
     </div>
+  </section>
 
     <!--Project images and statements-->
     <div class="header-info" id="name-hover">
@@ -188,97 +186,100 @@
 
     <!--Slide numnbers-->
     <!-- 01.0-->
-    <div class="project-slide-no" id="slide0-1">
-      <p>01.0</p>
-    </div>
-    <div class="project-slide-no" id="slide1-1">
-      <p>01.1</p>
-    </div>
-    <div class="project-slide-no" id="slide2-1">
-      <p>01.2</p>
-    </div>
-    <div class="project-slide-no" id="slide3-1">
-      <p>01.3</p>
-    </div>
-    <div class="project-slide-no" id="slide4-1">
-      <p>01.4</p>
-    </div>
-    <div class="project-slide-no" id="slide5-1">
-      <p>01.5</p>
-    </div>
-    <div class="project-slide-no" id="slide6-abc1">
-      <p>01.ABC</p>
-    </div>
+    <div class="slide-numbers-vf">
+      <div class="project-slide-no" id="slide0-1">
+        <p>01.0</p>
+      </div>
+      <div class="project-slide-no" id="slide1-1">
+        <p>01.1</p>
+      </div>
+      <div class="project-slide-no" id="slide2-1">
+        <p>01.2</p>
+      </div>
+      <div class="project-slide-no" id="slide3-1">
+        <p>01.3</p>
+      </div>
+      <div class="project-slide-no" id="slide4-1">
+        <p>01.4</p>
+      </div>
+      <div class="project-slide-no" id="slide5-1">
+        <p>01.5</p>
+      </div>
+      <div class="project-slide-no" id="slide6-abc1">
+        <p>01.ABC</p>
+      </div>
 
-    <!--2.0-->
-    <div class="project-slide-no" id="slide0-2">
-      <p>02.0</p>
-    </div>
-    <div class="project-slide-no" id="slide1-2">
-      <p>02.1</p>
-    </div>
-    <div class="project-slide-no" id="slide2-2">
-      <p>02.2</p>
-    </div>
-    <div class="project-slide-no" id="slide3-2">
-      <p>02.3</p>
-    </div>
-    <div class="project-slide-no" id="slide4-2">
-      <p>02.4</p>
-    </div>
-    <div class="project-slide-no" id="slide5-2">
-      <p>02.5</p>
-    </div>
-    <div class="project-slide-no" id="slide6-abc2">
-      <p>02.ABC</p>
-    </div>
+      <!--2.0-->
+      <div class="project-slide-no" id="slide0-2">
+        <p>02.0</p>
+      </div>
+      <div class="project-slide-no" id="slide1-2">
+        <p>02.1</p>
+      </div>
+      <div class="project-slide-no" id="slide2-2">
+        <p>02.2</p>
+      </div>
+      <div class="project-slide-no" id="slide3-2">
+        <p>02.3</p>
+      </div>
+      <div class="project-slide-no" id="slide4-2">
+        <p>02.4</p>
+      </div>
+      <div class="project-slide-no" id="slide5-2">
+        <p>02.5</p>
+      </div>
+      <div class="project-slide-no" id="slide6-abc2">
+        <p>02.ABC</p>
+      </div>
 
-    <!--3.0-->
-    <div class="project-slide-no" id="slide0-3">
-      <p>03.0</p>
-    </div>
-    <div class="project-slide-no" id="slide1-3">
-      <p>03.1</p>
-    </div>
-    <div class="project-slide-no" id="slide2-3">
-      <p>03.2</p>
-    </div>
-    <div class="project-slide-no" id="slide3-3">
-      <p>03.3</p>
-    </div>
-    <div class="project-slide-no" id="slide4-3">
-      <p>03.4</p>
-    </div>
-    <div class="project-slide-no" id="slide5-3">
-      <p>03.5</p>
-    </div>
-    <div class="project-slide-no" id="slide6-3">
-      <p>03.6</p>
-    </div>
-    <div class="project-slide-no" id="slide7-abc3">
-      <p>03.ABC</p>
-    </div>
+      <!--3.0-->
+      <div class="project-slide-no" id="slide0-3">
+        <p>03.0</p>
+      </div>
+      <div class="project-slide-no" id="slide1-3">
+        <p>03.1</p>
+      </div>
+      <div class="project-slide-no" id="slide2-3">
+        <p>03.2</p>
+      </div>
+      <div class="project-slide-no" id="slide3-3">
+        <p>03.3</p>
+      </div>
+      <div class="project-slide-no" id="slide4-3">
+        <p>03.4</p>
+      </div>
+      <div class="project-slide-no" id="slide5-3">
+        <p>03.5</p>
+      </div>
+      <div class="project-slide-no" id="slide6-3">
+        <p>03.6</p>
+      </div>
+      <div class="project-slide-no" id="slide7-abc3">
+        <p>03.ABC</p>
+      </div>
 
-    <!--4.0-->
-    <div class="project-slide-no" id="slide0-4">
-      <p>04.0</p>
+      <!--4.0-->
+      <div class="project-slide-no" id="slide0-4">
+        <p>04.0</p>
+      </div>
+      <div class="project-slide-no" id="slide1-4">
+        <p>04.1</p>
+      </div>
+      <div class="project-slide-no" id="slide2-4">
+        <p>04.2</p>
+      </div>
+      <div class="project-slide-no" id="slide3-4">
+        <p>04.3</p>
+      </div>
+      <div class="project-slide-no" id="slide4-abc4">
+        <p>04.ABC</p>
+      </div>
     </div>
-    <div class="project-slide-no" id="slide1-4">
-      <p>04.1</p>
-    </div>
-    <div class="project-slide-no" id="slide2-4">
-      <p>04.2</p>
-    </div>
-    <div class="project-slide-no" id="slide3-4">
-      <p>04.3</p>
-    </div>
-    <div class="project-slide-no" id="slide4-abc4">
-      <p>04.ABC</p>
-    </div>
+  </div> <!--END CONTAINER-->
 
-    <section class="project-nav">
+  <section class="project-nav">
     <div class="project-info" id="project-info-1">
-      <h3>1</h3>
+      <h3 class="project-header-center">1</h3>
       <h3><a href="#">HTTP://OFPLACE.INFO book &amp; website</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
@@ -291,21 +292,21 @@
     </div>
 
     <div class="project-info" id="project-info-2">
-      <h3>2</h3>
+      <h3 class="project-header-center">2</h3>
       <h3><a href="#">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
-        <li><a href="#">2</a</li>
-        <li><a href="#">3</a</li>
-        <li><a href="#">4</a</li>
-        <li><a href="#">5</a</li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
         <li><a href="#">ABC</a></li>
       </ul>
     </div>
 
     <div class="project-info" id="project-info-3">
-      <h3>3</h3>
-      <h3><a href="#">MISCELLANEOUS POSTERS II</a></h3>
+      <h3 class="project-header-center">3</h3>
+      <h3 class="copy-padding"><a href="#">MISCELLANEOUS POSTERS II</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -318,7 +319,7 @@
     </div>
 
     <div class="project-info" id="project-info-4">
-      <h3>4</h3>
+      <h3 class="project-header-center">4</h3>
       <h3><a href="#">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
