CSS rebuild/tweaks to nav and viewfinder height.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.typekit.net/axv7ufs.css">
+  <link rel="stylesheet" href="https://use.typekit.net/znj1khc.css">
+
+
+
 </head>
 
 <body>
@@ -30,7 +33,7 @@
       <li class="col-7-left" id="header-name"><a href="#">STEF<span id="header-lc">anie</span>TAM</a></li>
       <!-- FOR SUBPAGES
       <li class="page-title"></li>-->
-      <li class="col-7-center">test</li>
+      <li class="col-7-center header-project-title"></li>
       <li class="col-7-right">INFORMATION <img src="img/face-01.png"></li>
     </ul>
   </header>
@@ -54,7 +57,10 @@
     <!--Project images and statements-->
     <div class="header-info" id="name-hover">
       <p class="name-hover-info">
-        i'm stefanie, an la based multidisciplinary designer and design senior at ucla d|ma. i'm keen on funky mags, poorly rendered 3D objects, and fun webtoys.
+        i'm stefanie, an la based multidisciplinary designer and design senior at ucla d|ma.
+      </p>
+      <p>
+        i'm keen on funky mags, poorly rendered 3D objects, and fun webtoys.
       </p>
     </div>
 
@@ -275,7 +281,8 @@
         <p>04.ABC</p>
       </div>
     </div>
-  </div> <!--END CONTAINER-->
+  </div>
+  <!--END CONTAINER-->
 
   <section class="project-nav">
     <div class="project-info" id="project-info-1">
@@ -329,17 +336,6 @@
       </ul>
     </div>
   </section>
-
-
-
-
-
-
-
-
-
-
-
 
   <!--[if lte IE 9]>
   <!--[if lte IE 9]\
