Added images edit JS to Hover Stay

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
       <i class="fas fa-chevron-right"></i>
     </div>
     <ul>
-      <li class="col-7-left" id="header-name"><a href="#">STEF<span id="header-lc">anie</span>TAM</a></li>
+      <li class="col-7-left" id="header-name">STEF<span id="header-lc">anie</span>TAM</a></li>
       <!-- FOR SUBPAGES
       <li class="page-title"></li>-->
       <li class="col-7-center header-project-title"></li>
-      <li class="col-7-right">INFORMATION <img src="img/face-01.png"></li>
+      <li class="col-7-right" id="header-information">INFORMATION <img src="img/face-01.png"></li>
     </ul>
   </header>
+
   <div class="view-finder">
+
   <!--Project Titles-->
   <section class="accro-section">
     <div class="project-acro" id="acro1">
@@ -56,19 +58,19 @@
 
     <!--Project images and statements-->
     <div class="header-info" id="name-hover">
-      <p class="name-hover-info">
+      <p class="header-info-copy">
         i'm stefanie, an la based multidisciplinary designer and design senior at ucla d|ma.
       </p>
-      <p>
+      <p class="header-info-copy">
         i'm keen on funky mags, poorly rendered 3D objects, and fun webtoys.
       </p>
     </div>
 
     <div class="header-info" id="information-hover">
-      <p class="information-hover-info">
+      <p class="header-info-copy">
         <a href="#">email</a> — <a href="#">cv</a> — <a href="#">are.na</a> — <a href="#">ig</a>
       </p>
-      <p>
+      <p class="header-info-copy">
         updated: 10.10.18
       </p>
     </div>
@@ -80,19 +82,19 @@
       </p>
     </div>
     <div class="project-image" id="image1-1">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="img/1/1-1.gif" alt="OfPlace Website">
     </div>
-    <div class="project-image" id="image2-1">
-      <img src="https://via.placeholder.com/800x600.png">
+    <div class="project-image" id="image2-1" >
+      <img src="img/1/1-2.png" alt="OfPlace Website">
     </div>
     <div class="project-image" id="image3-1">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="img/1/1-3.png" alt="OfPlace Website">
     </div>
     <div class="project-image" id="image4-1">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="img/1/1-4.png" alt="OfPlace Website">
     </div>
     <div class="project-image" id="image5-1">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="img/1/1-5.png" alt="OfPlace Website">
     </div>
     <div class="project-image" id="image6-1">
       <p class="project-statement">
@@ -111,19 +113,19 @@
       </p>
     </div>
     <div class="project-image" id="image1-2">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image2-2">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image3-2">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image4-2">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image5-2">
-      <img src="https://via.placeholder.com/800x600.png">
+      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image6-2">
       <p class="project-statement">
@@ -140,22 +142,22 @@
       </p>
     </div>
     <div class="project-image" id="image1-3">
-      <img src="https://via.placeholder.com/600x800.png">
+      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
     </div>
     <div class="project-image" id="image2-3">
-      <img src="https://via.placeholder.com/600x800.png">
+      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
     </div>
     <div class="project-image" id="image3-3">
-      <img src="https://via.placeholder.com/600x800.png">
+      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
     </div>
     <div class="project-image" id="image4-3">
-      <img src="https://via.placeholder.com/600x800.png">
+      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
     </div>
     <div class="project-image" id="image5-3">
-      <img src="https://via.placeholder.com/600x800.png">
+      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
     </div>
     <div class="project-image" id="image6-3">
-      <img src="https://via.placeholder.com/600x800.png">
+      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
     </div>
     <div class="project-image" id="image7-3">
       <p class="project-statement">
@@ -173,13 +175,13 @@
       </p>
     </div>
     <div class="project-image" id="image1-4">
-      <img src="https://via.placeholder.com/600x600.png">
+      <img src="https://via.placeholder.com/600x600.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
     <div class="project-image" id="image2-4">
-      <img src="https://via.placeholder.com/600x600.png">
+      <img src="https://via.placeholder.com/600x600.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
     <div class="project-image" id="image3-4">
-      <img src="https://via.placeholder.com/600x600.png">
+      <img src="https://via.placeholder.com/600x600.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
     <div class="project-image" id="image4-4">
       <p class="project-statement">
@@ -193,7 +195,7 @@
     <!--Slide numnbers-->
     <!-- 01.0-->
     <div class="slide-numbers-vf">
-      <div class="project-slide-no" id="slide0-1">
+      <div class="project-slide-no" id="slide0-1" >
         <p>01.0</p>
       </div>
       <div class="project-slide-no" id="slide1-1">
