Experiementing with Grids/Troubleshooting scaling/flex Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </div>
 
     <!-- 01.0-->
-    <div class="project-image" id="image0-1">
-      <p class="project-title-body">
+    <div class="project-image">
+      <p class="project-title-body"  id="title0-1">
         HTTP://OFPLACE.INFO Book &amp; website.
       </p>
     </div>
@@ -107,8 +107,8 @@
 
 
     <!-- 02.0-->
-    <div class="project-image" id="image0-2">
-      <p class="project-title-body">
+    <div class="project-image">
+      <p class="project-title-body" id="image0-2">
         From waste to change: Sustainability &amp; Activism
       </p>
     </div>
@@ -289,20 +289,20 @@
   <section class="project-nav">
     <div class="project-info" id="project-info-1">
       <h3 class="project-header-center">1</h3>
-      <h3><a href="#">HTTP://OFPLACE.INFO book &amp; website</a></h3>
+      <h3><a href="#"  class="project-title-lg" id="nav-title-1">HTTP://OFPLACE.INFO book &amp; website</a></h3>
       <ul class="project-info-no">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">ABC</a></li>
+        <li><a href="#" id="nav1-1">1</a></li>
+        <li><a href="#" id="nav2-1">2</a></li>
+        <li><a href="#" id="nav3-1">3</a></li>
+        <li><a href="#" id="nav4-1">4</a></li>
+        <li><a href="#" id="nav5-1">5</a></li>
+        <li><a href="#" id="navabc-1">ABC</a></li>
       </ul>
     </div>
 
     <div class="project-info" id="project-info-2">
       <h3 class="project-header-center">2</h3>
-      <h3><a href="#">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
+      <h3><a href="#" "nav-title-1">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -315,7 +315,7 @@
 
     <div class="project-info" id="project-info-3">
       <h3 class="project-header-center">3</h3>
-      <h3 class="copy-padding"><a href="#">MISCELLANEOUS POSTERS II</a></h3>
+      <h3 class="copy-padding"><a href="#" "nav-title-3">MISCELLANEOUS POSTERS II</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -329,7 +329,7 @@
 
     <div class="project-info" id="project-info-4">
       <h3 class="project-header-center">4</h3>
-      <h3><a href="#">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
+      <h3><a href="#" "nav-title-4">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
       <ul class="project-info-no">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
